[package]
name = "no-surprises"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust library for predictable and reliable behavior"
license = "MIT"
repository = "https://github.com/yourusername/no-surprises-rs"
keywords = ["reliability", "predictability", "safety"]
categories = ["algorithms", "data-structures"]

[dependencies]
paste = "1.0" 

[dev-dependencies]
